--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.10",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "html2canvas": "^1.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
